--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -41,3 +41,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          # 添加 enablement 参数，自动检查并启用 GitHub Pages
+          enablement: true
